<resources>
    <string name="app_name">MyCillin Partner</string>
    <string name="permission_desc">In order to use MyCillin, you have to allow permissions on your Android device.</string>
    <string name="permission_rationale_title">This permission needed</string>
    <string name="permission_rationale_message">All permissions needed to access all features</string>
    <string name="permission_rationale_settings_button_text">SETTING</string>
    <string name="all_permissions_denied_feedback">All permissions needed</string>
    <string name="camera_permission_denied_feedback">Camera permission Needed</string>
    <string name="storage_permission_denied_feedback">Galerry permission needed</string>
    <string name="call_permission_denied_dialog_title">Call permission</string>
    <string name="audio_permission_denied_dialog_feedback">You can\'t make a call until permission granted</string>
    <string name="version">VERSION</string>
    <string name="storage">Storage</string>
    <string name="izinkan">ALLOW</string>
    <string name="location">Location</string>
    <string name="call">Call</string>
    <string name="camera">Camera</string>
    <string name="intro_one_desc">We do not know when we are sick and need health service</string>
    <string name="intro_two_desc">Medical field innovation that make it easier for you to access health services</string>
    <string name="intro_three_desc">Let\'s join with MyCillin big family</string>
    <string name="intro_three_title">and… happy family is yours</string>
    <string name="loginActivity_tosNotes">By registering, I have read and agreed to MyCillin\'s Term of Use and Privacy Policy</string>
    <string name="loginActivity_login">Login</string>
    <string name="loginActivity_alreadyHaveAccount">Already have an account</string>
    <string name="loginActivity_forgotPassword">Forgot Password</string>
    <string name="loginActivity_registerEMail">E-Mail</string>
    <string name="loginActivity_registerPassword">Password</string>
    <string name="pressBackAgainToLeave">Press back again to leave</string>
    <string name="nav_home">Home</string>
    <string name="nav_account">Account</string>
    <string name="nav_medical_record">Medical Record</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about_mycillin">About</string>
    <string name="nav_e_wallet">E-Wallet</string>
    <string name="nav_invite_friend">Invite Friend</string>
    <string name="nav_todo">Task</string>
    <string name="shareIntent_subject">Join MyCillin Now!</string>
    <string name="shareIntent_text">Join MyCillin and get the reward. Visit this link to learn more http://mycillin.com/services/web/registration/</string>
    <string name="shareIntent_title">Share MyCillin to...</string>
    <string name="aboutFragment_version">Version</string>
    <string name="aboutFragment_connect">Connect with us</string>
    <string name="aboutFragment_contact">Contact us</string>
    <string name="aboutFragment_facebook">Like us on Facebook</string>
    <string name="aboutFragment_twitter">Follow us on Twitter</string>
    <string name="aboutFragment_instagram">Follow us on Instagram</string>
    <string name="aboutFragment_youtube">Watch us on Youtube</string>
    <string name="aboutFragment_playstore">Rate us on Play Store</string>
    <string name="aboutFragment_aboutDesc">MyCillin is a bridging digital platform between people who need the best, easiest, and cheapest healthcare services with professionals and institutions in the medical field</string>
    <string name="eWalletFragment_currency">Rp</string>
    <string name="eWalletFragment_amount">0</string>
    <string name="eWalletFragment_virtualAccNumberTitle">Virtual Account Number</string>
    <string name="eWalletFragment_virtualAccNumber">1019270000001</string>
    <string name="rowEWalletHistoryList_amount">Rp 175.000</string>
    <string name="rowEWalletHistoryList_date">25 Maret 2017</string>
    <string name="row_date" translatable="false">25 Maret 2017, 10:00 PM</string>
    <string name="accountActivity_manageAccountTitle">Manage Account</string>
    <string name="accountActivity_changePasswordTitle">Change Password</string>
    <string name="accountActivity_signOutTitle">Sign Out</string>
    <string name="accountActivity_termsPrivacyPolicyTitle">Terms &amp; Privacy Policy</string>
    <string name="servicesActivity_doctorsName">Doctor\'s Name</string>
    <string name="accountDetailActivity_infoDesc">Please provide your information correctly</string>
    <string name="accountDetailActivity_fullNameDesc">Full Name</string>
    <string name="accountDetailActivity_addressDesc">Address</string>
    <string name="accountDetailActivity_phoneDesc">Phone Number</string>
    <string name="accountDetailActivity_genderDesc">Gender</string>
    <string name="accountDetailActivity_maleDesc">Male</string>
    <string name="accountDetailActivity_femaleDesc">Female</string>
    <string name="accountDetailActivity_DateOfBirthDesc">Date of Birth</string>
    <string name="accountDetailActivity_professionCategoryDesc">Profession Category</string>
    <string name="accountDetailActivity_areaOfExpertiseDesc">Area of Expertise</string>
    <string name="accountDetailActivity_areaOfWorkDesc">Working Area</string>
    <string name="accountDetailActivity_isAgreeDesc">I agree to the terms and conditions and agree to provide personal information to MyCillin.</string>
    <string name="menu_save">Save</string>
    <string name="accountDetailActivity_title">Account Detail</string>
    <string name="accountDetailActivity_emailDesc">E-Mail</string>
    <string name="accountDetailActivity_professionalInformationDesc">Professional Information</string>
    <string name="accountDetailActivity_IdentityInformationDesc">Identity Information</string>
    <string name="accountDetailActivity_yearsOfPracticeDesc">Year of Work</string>
    <string name="accountDetailActivity_permittDesc">SIPP Number:</string>
    <string name="accountDetailActivity_professionDescriptionDesc">Profession Description</string>
    <string name="accountDetailActivity_practiceAddressDesc">Practice Address</string>
    <string name="changePasswordDialog_title">Change Password</string>
    <string name="changePasswordDialog_old">Old Password</string>
    <string name="changePasswordDialog_new">New Password</string>
    <string name="changePasswordDialog_confirmNew">Confirm New Password</string>
    <string name="filterBookDoctorDIalog_cancelBtn">CANCEL</string>
    <string name="filterBookDoctorDIalog_applyBtn">APPLY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HomeFragment_reservationTitle">Reservation</string>
    <string name="HomeFragment_consultationTitle">Consultation</string>
    <string name="HomeFragment_visitTitle">Visit</string>
    <string name="rowVisitList_patientName">Reno Rasiwara</string>
    <string name="rowVisitList_bookType">Visit request to home</string>
    <string name="rowVisitList_bookTime">15.00 WIB</string>
    <string name="homeVisitDetailActivity_addressInfo">Jl.Asem No.32, Sawangan, Depok</string>
    <string name="homeVisitDetailActivity_feeAmount">Rp 200.000</string>
    <string name="row_payment" translatable="false">Rp 200.000 - CASH</string>
    <string name="homeVisitDetail_title">Visit Request Detail</string>
    <string name="rowReservationList_bookType">Reservation Request</string>
    <string name="homeReservationDetailActivity_scheduleTitle">Schedule</string>
    <string name="homeReservationDetailActivity_timeTitle">07 October 2017, 15.00 WIB</string>
    <string name="reservationRequestDetail_title">Reservation Request Detail</string>
    <string name="toDoInProgressDetail_title">In Progress Detail</string>
    <string name="inProgressDetail_requesterProfile">Requester Profile</string>
    <string name="inProgressDetail_medicalRecord">Medical Record</string>
    <string name="requesterProfileActivity_name">Name</string>
    <string name="requesterProfileActivity_gender">Gender</string>
    <string name="requesterProfileActivity_age">Age</string>
    <string name="requesterProfileActivity_height">Height</string>
    <string name="requesterProfileActivity_weight">Weight</string>
    <string name="requesterProfileActivity_bloodType">Blood Type</string>
    <string name="medicalRecordAvtivity_infoDesc">The usage of these informations are limited to medical treatment purposes only. These informations are very confidential, you are prohibited from divulging this information to anyone.</string>
    <string name="medicalRecordActivity_filterDesc">Medical Records Of</string>
    <string name="rowMedicalRecord_month">APR</string>
    <string name="rowMedicalRecord_day">10</string>
    <string name="rowMedicalRecord_year">2017</string>
    <string name="rowMedicalRecord_medicalPersonnelDesc">Medical Personnel :</string>
    <string name="rowMedicalRecord_doctorNameDesc">dr Andi Husada</string>
    <string name="medicalRecordDetailActivity_title">Medical Record Detail</string>
    <string name="medicalRecordDetailActivity_dateTitle">10 JAN 2017</string>
    <string name="medicalRecordDetailActivity_doctorTitle">dr Andi Husada</string>
    <string name="medicalRecordDiagnose_info">Diagnose</string>
    <string name="medicalRecordAction_info">Action</string>
    <string name="medicalDiagnoseResult_info">Result</string>
    <string name="medicalRecordPrescription_info">Prescription</string>
    <string name="medicalRecordDetailActivity_diagnose">Diagnose</string>
    <string name="medicalRecordDetailActivity_diagnoseDesc">Acute diarrhea with abdominal cramps</string>
    <string name="medicalRecordDetailActivity_result">Check Up Result</string>
    <string name="medicalRecordDetailActivity_resultInfo1">Systole</string>
    <string name="medicalRecordDetailActivity_result1">120 mm/hg</string>
    <string name="medicalRecordDetailActivity_resultInfo2">Diastole</string>
    <string name="medicalRecordDetailActivity_result2">75 mm/hg</string>
    <string name="medicalRecordDetailActivity_resultInfo3">Weight (estimated)</string>
    <string name="medicalRecordDetailActivity_result3">60 kg</string>
    <string name="completeCheckUpResultFragment_infoDesc">Please provide the information on the results of the examination you have done to the patient.</string>
    <string name="completeCheckUpResultFragment_systole">Systole</string>
    <string name="completeCheckUpResultFragment_diastole">Diastole</string>
    <string name="completeCheckUpResultFragment_bodyTemperature">Body Temperature</string>
    <string name="completeCheckUpResultFragment_physicalCondition">Physical Condition</string>
    <string name="completeDiagnoseFragment_infoDesc">Please provide the information on the diagnosis of the patient\'s illness.</string>
    <string name="completeDiagnoseFragment_diagnosisInformation">Diagnosis Information</string>
    <string name="completeDiagnoseFragment_additionalInformation">Additional Information</string>
    <string name="completeMedicalActionsFragment_infoDesc">Please provide the information on the medical actions that has been given to the patient.</string>
    <string name="completeMedicalActionsFragment_medicalActionOne">Medical Action</string>
    <string name="completeMedicalActionsFragment_medicalActionTwo">Medical Action 2</string>
    <string name="completeMedicalActionsFragment_medicalActionThree">Medical Action 3</string>
    <string name="completeMedicalActionsFragment_medicalRecommendation">Medical Recommendation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="task">Task</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="cholesterol_level">Cholesterol Level</string>
</resources>