<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modul.todo.completion.CompleteCheckUpResultFragment">

    <LinearLayout
        android:id="@+id/completeCheckUpResultFragment_ll_headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/completeCheckUpResultFragment_tv_infoDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/completeCheckUpResultFragment_infoDesc"
            android:textColor="@color/primaryText"
            android:textSize="15sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/completeCheckUpResultFragment_ll_headerContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small">

                <EditText
                    android:id="@+id/accountDetailActivity_et_systole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/completeCheckUpResultFragment_systole"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small">

                <EditText
                    android:id="@+id/accountDetailActivity_et_diastole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/completeCheckUpResultFragment_diastole"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small">

                <EditText
                    android:id="@+id/accountDetailActivity_et_blood_sugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_sugar"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small">

                <EditText
                    android:id="@+id/accountDetailActivity_et_cholesterol_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cholesterol_level"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small">

                <EditText
                    android:id="@+id/accountDetailActivity_et_bodyTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/completeCheckUpResultFragment_bodyTemperature"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small">

                <EditText
                    android:id="@+id/accountDetailActivity_et_physicalCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/completeCheckUpResultFragment_physicalCondition"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>