<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modul.todo.completion.CompleteMedicalActionsFragment" >

    <LinearLayout
        android:id="@+id/completeMedicalActionsFragment_ll_headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/completeMedicalActionsFragment_tv_infoDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/primaryText"
            android:textSize="15sp"
            android:text="@string/completeMedicalActionsFragment_infoDesc" />

    </LinearLayout>

    <ScrollView
        android:layout_below="@+id/completeMedicalActionsFragment_ll_headerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small" >

                <EditText
                    android:id="@+id/completeMedicalActionsFragment_et_medicalActionOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/completeMedicalActionsFragment_medicalActionOne"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small" >

                <EditText
                    android:id="@+id/completeMedicalActionsFragment_et_medicalActionTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/completeMedicalActionsFragment_medicalActionTwo"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small" >

                <EditText
                    android:id="@+id/completeMedicalActionsFragment_et_medicalActionThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/completeMedicalActionsFragment_medicalActionThree"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small" >

                <EditText
                    android:id="@+id/completeMedicalActionsFragment_et_medicalRecommendation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/completeMedicalActionsFragment_medicalRecommendation"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>